Add OOP patterns

--- a/General/Принципы проектирования.md
+++ b/General/Принципы проектирования.md
@@ -12,7 +12,7 @@
 
 Этот принцип заключается в том, что нужно избегать повторений одного и того же кода. Лучше использовать универсальные свойства и функции.
 
-Как можно обнаружить проблему:
+Как обнаружить проблему:
 
 - Изменяя алгоритм или поведение, приходится менять код в нескольких местах
 - В проекте есть одинаковые части кода
