Add Celery, RabbitMQ, testing

--- a/General/Паттерны ООП.md
+++ b/General/Паттерны ООП.md
@@ -39,7 +39,7 @@
 
 **Простыми словами:** Фабрика фабрик. Фабрика, которая группирует индивидуальные, но связанные/зависимые фабрики без указания их конкретных классов.
 
-[Реализация на Python](files/patterns/abstract_factory.py)
+[Реализация на Python](files/oop_patterns/abstract_factory.py)
 
 ### Строитель (Builder)
 
@@ -47,7 +47,7 @@
 
 **Простыми словами:** Позволяет создавать различные виды объекта, избегая засорения конструктора. Он полезен, когда может быть несколько видов объекта или когда необходимо множество шагов, связанных с его созданием.
 
-[Реализация на Python](files/patterns/builder.py)
+[Реализация на Python](files/oop_patterns/builder.py)
 
 ### Фабричный метод (Fabric Method)
 
@@ -55,7 +55,7 @@
 
 **Простыми словами:** Менеджер предоставляет способ делегирования логики создания экземпляра дочерним классам.
 
-[Реализация на Python](files/patterns/fabric_method.py)
+[Реализация на Python](files/oop_patterns/fabric_method.py)
 
 ### Прототип (Prototype)
 
@@ -63,7 +63,7 @@
 
 **Простыми словами:** Создает объект, основанный на существующем объекте при помощи клонирования.
 
-[Реализация на Python](files/patterns/prototype.py)
+[Реализация на Python](files/oop_patterns/prototype.py)
 
 ### Одиночка (Singleton)
 
@@ -71,7 +71,7 @@
 
 **Простыми словами:** Обеспечивает тот факт, что создаваемый объект является единственным объектом своего класса.
 
-[Реализация на Python](files/patterns/singleton.py)
+[Реализация на Python](files/oop_patterns/singleton.py)
 
 ### Простая фабрика (Simple Factory)
 
@@ -79,7 +79,7 @@
 
 **Простыми словами:** Генерирует экземпляр для клиента, не раскрывая никакой логики.
 
-[Реализация на Python](files/patterns/simple_factory.py)
+[Реализация на Python](files/oop_patterns/simple_factory.py)
 
 
 
@@ -93,7 +93,7 @@
 
 **Простыми словами:** Позволяет обернуть несовместимые объекты в адаптер, чтобы сделать их совместимыми с другим классом.
 
-[Реализация на Python](files/patterns/adapter.py)
+[Реализация на Python](files/oop_patterns/adapter.py)
 
 ### Мост (Bridge)
 
@@ -101,7 +101,7 @@
 
 **Простыми словами:** Предпочтение композиции над наследованием. Детали реализации передаются из одной иерархии в другой объект с отдельной иерархией.
 
-[Реализация на Python](files/patterns/bridge.py)
+[Реализация на Python](files/oop_patterns/bridge.py)
 
 ### Компоновщик (Composite)
 
@@ -109,7 +109,7 @@
 
 **Простыми словами:** Позволяет клиентам работать с индивидуальными объектами в едином стиле.
 
-[Реализация на Python](files/patterns/composite.py)
+[Реализация на Python](files/oop_patterns/composite.py)
 
 ### Декоратор (Decorator)
 
@@ -117,7 +117,7 @@
 
 **Простыми словами:** Позволяет динамически изменять поведение объекта во время работы, оборачивая их в объект класса декоратора.
 
-[Реализация на Python](files/patterns/decorator.py)
+[Реализация на Python](files/oop_patterns/decorator.py)
 
 ### Фасад (Facade)
 
@@ -125,7 +125,7 @@
 
 **Простыми словами:** Предоставляет упрощенный интерфейс для сложной системы.
 
-[Реализация на Python](files/patterns/facade.py)
+[Реализация на Python](files/oop_patterns/facade.py)
 
 ### Приспособленец (Flyweight)
 
@@ -133,7 +133,7 @@
 
 **Простыми словами:** Минимизация использования памяти или вычислительной стоимости путем разделения ресурсов с наибольшим количеством похожих объектов.
 
-[Реализация на Python](files/patterns/flyweight.py)
+[Реализация на Python](files/oop_patterns/flyweight.py)
 
 ### Заместитель (Proxy)
 
@@ -141,7 +141,7 @@
 
 **Простыми словами:** Класс отображает функциональность другого класса.
 
-[Реализация на Python](files/patterns/proxy.py)
+[Реализация на Python](files/oop_patterns/proxy.py)
 
 
 
@@ -155,7 +155,7 @@
 
 **Простыми словами:** цепочка обязанностей помогает строить цепочки объектов. Запрос входит с одного конца и проходит через каждый объект, пока не найдет подходящий обработчик.
 
-[Реализация на Python](files/patterns/chain_of_responsibility.py)
+[Реализация на Python](files/oop_patterns/chain_of_responsibility.py)
 
 ### Команда (Command)
 
@@ -163,7 +163,7 @@
 
 **Простыми словами:** Позволяет инкапсулировать действия в объекты. Основная идея, стоящая за шаблоном — предоставление средств, для разделения клиента и получателя.
 
-[Реализация на Python](files/patterns/command.py)
+[Реализация на Python](files/oop_patterns/command.py)
 
 ### Итератор (Iterator)
 
@@ -171,13 +171,13 @@
 
 **Простыми словами:** Представляет способ доступа к элементам объекта без показа базового представления.
 
-[Реализация на Python](files/patterns/iterator.py)
+[Реализация на Python](files/oop_patterns/iterator.py)
 
 ### Интерпретатор (Interpreter)
 
 Определяет представление грамматики для заданного языка и интерпретатор предложений этого языка. Как правило, данный шаблон применяется для часто повторяющихся операций.
 
-[Реализация на Python](files/patterns/interpreter.py)
+[Реализация на Python](files/oop_patterns/interpreter.py)
 
 ### Посредник (Mediator)
 
@@ -185,7 +185,7 @@
 
 **Простыми словами:** Подразумевает добавление стороннего объекта (посредника) для управления взаимодействием между двумя объектами (коллегами). Шаблон помогает уменьшить связанность (coupling) классов, общающихся друг с другом, ведь теперь они не должны знать о реализациях своих собеседников.
 
-[Реализация на Python](files/patterns/mediator.py)
+[Реализация на Python](files/oop_patterns/mediator.py)
 
 ### Хранитель (Memento)
 
@@ -193,7 +193,7 @@
 
 **Простыми словами:** Фиксирует и хранит текущее состояние объекта, чтобы оно легко восстанавливалось.
 
-[Реализация на Python](files/patterns/memento.py)
+[Реализация на Python](files/oop_patterns/memento.py)
 
 ### Наблюдатель (Observer)
 
@@ -201,7 +201,7 @@
 
 **Простыми словами:** Определяет зависимость между объектами, чтобы при изменении состояния одного из них зависимые от него узнавали об этом.
 
-[Реализация на Python](files/patterns/observer.py)
+[Реализация на Python](files/oop_patterns/observer.py)
 
 ### Состояние (State)
 
@@ -209,7 +209,7 @@
 
 **Простыми словами:** Позволяет менять поведение класса при изменении состояния.
 
-[Реализация на Python](files/patterns/state.py)
+[Реализация на Python](files/oop_patterns/state.py)
 
 ### Стратегия (Strategy)
 
@@ -217,7 +217,7 @@
 
 **Простыми словами:** Позволяет переключаться между алгоритмами или стратегиями в зависимости от ситуации.
 
-[Реализация на Python](files/patterns/strategy.py)
+[Реализация на Python](files/oop_patterns/strategy.py)
 
 ### Шаблонный метод (Template Method)
 
@@ -225,7 +225,7 @@
 
 **Простыми словами:** Определяет каркас выполнения определенного алгоритма, но реализацию самих этапов делегирует дочерним классам.
 
-[Реализация на Python](files/patterns/template_method.py)
+[Реализация на Python](files/oop_patterns/template_method.py)
 
 ### Посетитель (Visitor)
 
@@ -233,7 +233,7 @@
 
 **Простыми словами:** Позволяет добавлять будущие операции для объектов без их модифицирования.
 
-[Реализация на Python](files/patterns/visitor.py)
+[Реализация на Python](files/oop_patterns/visitor.py)
 
 
 
@@ -242,3 +242,4 @@
 - [Оригинал статьи](https://tproger.ru/translations/design-patterns-simple-words-1/)
 - [Оригинал реализаций на Python](https://github.com/pkolt/design_patterns/blob/master/README.rst)
 - [Туториал по паттернам](https://refactoring.guru/ru/design-patterns)
+- [Шпаргалка по паттернам](files/oop_patterns.pdf)
