Update Что нужно мониторить.md

--- a/DevOps/Мониторинг/Что нужно мониторить.md
+++ b/DevOps/Мониторинг/Что нужно мониторить.md
@@ -1,6 +1,7 @@
 # Что нужно мониторить
 
 - [Описание метрик](#описание-метрик)
+- [Чем мониторить](#чем-мониторить)
 - [Полезные ссылки](#полезные-ссылки)
 
 
@@ -39,6 +40,16 @@
 	- Количество продаж
 	- ...
 - Поведение пользователей
+
+
+
+## Чем мониторить
+
+- [Prometheus](Prometheus) — серверы, приложения
+- [ELK](Sentry) — логи
+- [Sentry](Sentry) — ошибки приложения
+- Google Analytics / Яндекс.Метрика / Matomo — поведение пользователей
+- [Grafana](Grafana) — визуализация всех метрик
 
 
 
