Update Что нужно мониторить.md

--- a/DevOps/Мониторинг/Что нужно мониторить.md
+++ b/DevOps/Мониторинг/Что нужно мониторить.md
@@ -45,11 +45,11 @@
 
 ## Чем мониторить
 
-- [Prometheus](Prometheus) — серверы, приложения
-- [ELK](Sentry) — логи
-- [Sentry](Sentry) — ошибки приложения
+- [Prometheus](Prometheus.md) — серверы, приложения
+- [ELK](../ELK) — логи
+- [Sentry](Sentry.md) — ошибки приложения
 - Google Analytics / Яндекс.Метрика / Matomo — поведение пользователей
-- [Grafana](Grafana) — визуализация всех метрик
+- [Grafana](Grafana.md) — визуализация всех метрик
 
 
 
